@@ -18,6 +18,15 @@
 @StepClassFilter @StepSample
 Feature: Step - sample()
 
+  Scenario: g_V_sampleX1X_byXageX_byXT_idX
+    Given the modern graph
+    And the traversal of
+      """
+      g.V().sample(1).by("age").by(T.id)
+      """
+    When iterated to list
+    Then the traversal will raise an error with message containing text of "Sample step can only have one by modulator"
+
   Scenario: g_E_sampleX1X
     Given the modern graph
     And the traversal of
